Bug 1025077 - Implement ServiceWorkerContainer.ready, r=nsm