dom/workers/ServiceWorkerContainer.h
@@ -34,12 +34,6 @@ public:
 
   explicit ServiceWorkerContainer(nsPIDOMWindow* aWindow);
 
-  nsPIDOMWindow*
-  GetParentObject() const
-  {
-    return mWindow;
-  }
-
   JSObject*
   WrapObject(JSContext* aCx);
 
@@ -58,7 +52,7 @@ public:
   already_AddRefed<Promise>
   GetRegistrations(ErrorResult& aRv);
 
-  already_AddRefed<Promise>
+  Promise*
   GetReady(ErrorResult& aRv);
 
   // Testing only.
@@ -74,15 +68,19 @@ public:
   GetControllingWorkerScriptURLForPath(const nsAString& aPath,
                                        nsString& aScriptURL,
                                        ErrorResult& aRv);
+
+  // DOMEventTargetHelper
+  void DisconnectFromOwner() MOZ_OVERRIDE;
+
 private:
   ~ServiceWorkerContainer();
-
-  nsCOMPtr<nsPIDOMWindow> mWindow;
 
   // This only changes when a worker hijacks everything in its scope by calling
   // replace().
   // FIXME(nsm): Bug 982711. Provide API to let SWM invalidate this.
   nsRefPtr<workers::ServiceWorker> mControllerWorker;
+
+  nsRefPtr<Promise> mReadyPromise;
 };
 
 } // namespace dom
